@@ -133,6 +133,9 @@ Unreleased changes (1.0-dev)
 
 45. NUTCH-546 - file URL are filtered out by the crawler. (dogacan)
 
+46. NUTCH-554 - Generator throws IOException on invalid urls.
+    (Brian Whitman via ab)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
